hiden total profile, process bar

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -832,7 +832,7 @@
                     <button class="crawler-btn girls" id="girls-btn" onclick="startGirlsCrawler()">
                         Run Crawl Girls
                     </button>
-                    <div class="progress-container" id="girls-progress" style="display: none;">
+                    <!-- <div class="progress-container" id="girls-progress" style="display: none;">
                         <div class="phase-indicator" id="girls-phase-indicator" style="margin-bottom: 0.5rem; font-size: 0.9rem; font-weight: 500; color: #2196F3;">
                             🔄 Phase 1: Running Categories Crawler...
                         </div>
@@ -850,7 +850,7 @@
                                 <div class="stat-label">Processed</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
