--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -907,10 +907,10 @@
             <div class="loading-title">Crawling in Progress</div>
             <div class="loading-subtitle">Please wait while we process the data...</div>
             <div class="loading-phase" id="loading-phase">🔄 Phase 1: Running Categories Crawler...</div>
-            <!-- <div class="loading-progress">
+            <div class="loading-progress" style="display: none">
                 <div class="loading-progress-fill" id="loading-progress-fill"></div>
             </div>
-            <div class="loading-progress-text" id="loading-progress-text">0%</div> -->
+            <div class="loading-progress-text" id="loading-progress-text" style="display: none">0%</div>
         </div>
     </div>
 
