update thread to 3

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1001,7 +1001,7 @@
         </div>
 
         <!-- Logs Section -->
-        <div class="logs-section">
+        <div class="logs-section" style="display: none;">
             <h2 style="margin-bottom: 1rem;">📝 Live Logs</h2>
             <div class="logs-container" id="logs-container">
                 <div class="log-entry">
